# datafy-finetuning-university

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
notebooks/: 0_Preparing_setup_datafy_finetuning.ipynb  README.md
notebooks/Advanced/: 01_FineTuning_GPT3_5_Turbo.ipynb  01_LLM_DataConverter.ipynb  04_GPT2_Small_Qlora_FineTuning.ipynb  05_Deploy_GPT2_Inference_Endpoints.ipynb  06_FineTuning_GPT3_5_Turbo.ipynb  07_GPT2_Small_Qlora_FineTuning.ipynb  08_Deploy_GPT2_Inference_Endpoints.ipynb  QA_excel_template.xlsx  allied_bank.json
notebooks/Basic/: 01_Custom_Data_Generator.ipynb  01_Data_preparation_lab_student.ipynb  02_Custom_Data_Preparation.ipynb  02_Finetuned_NonFinetuned_LLMs.ipynb  03_Finetuned_NonFinetuned_LLMs.ipynb  03_Training_lab_student_lamini.ipynb  04_Training_Lamini.ipynb  04_Training_lab_student_HuggingFace.ipynb  05_Training_HuggingFace.ipynb
